--- a/favorites.html
+++ b/favorites.html
@@ -49,6 +49,7 @@
             </div>
         </div>
     </nav>
+
     <div class="container-fluid title">
         <h1>know them jams <i class="fa fa-music" aria-hidden="true"></i></h1>
         <h2>everything you NEED to know about your favorite albums!</h2>
@@ -63,18 +64,8 @@
     </div>
 
 
-    <div class="input-group mb-3">
-        <input type="text" class="form-control searchText" placeholder="Album Name" aria-label="Recipient's username"
-            aria-describedby="button-addon2">
-        <div class="input-group-append">
-            <button class="btn btn-outline-secondary searchButton" type="button" id="button-addon2">search</button>
-        </div>
-    </div>
-
-    <br><br>
-
     <div class="card">
-        <div class="card-header">this will hold our results</div>
+        <div class="card-header">this will hold a list of our favorites</div>
     </div>
 
 </body>
