--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="app.js"></script>
+    <!-- <script src="app.js"></script> -->
+    <!-- <script src="lastfm.js"></script> -->
+    <!-- <script src="spotify.js"></script> -->
+    <!-- <script src="https://apis.google.com/js/client.js"></script>  -->
+    <script src="https://apis.google.com/js/api.js"></script>
+    <script src="youtube.js"></script>
   </head>
   <body></body>
 </html>
