--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!-- Our main html code -->
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
 
 <head>
     <meta charset="UTF-8">
@@ -25,7 +24,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <!-- Our JS -->
-    <script src="assets/js/app.js"></script>
+    <!-- <script src="assets/js/app.js"></script> -->
+    <script src="assets/js/musixmusic.js"></script>
 
     <title>Know Them Jams</title>
 
@@ -81,9 +81,8 @@
 </body>
 
 
-
+<!-- 
 </html>
-=======
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -94,9 +93,8 @@
     <!-- <script src="lastfm.js"></script> -->
     <!-- <script src="spotify.js"></script> -->
     <!-- <script src="https://apis.google.com/js/client.js"></script>  -->
-    <script src="https://apis.google.com/js/api.js"></script>
+    <!-- <script src="https://apis.google.com/js/api.js"></script>
     <script src="youtube.js"></script>
-  </head>
-  <body></body>
-</html>
->>>>>>> master
+  </head> -->
+  <!-- <body></body>
+</html> -->
