stuff showing on page

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 
     <div class="input-group mb-3">
-        <input type="text" class="form-control searchText" placeholder="Album Name" aria-label="Recipient's username"
+        <input type="text" class="form-control searchText" placeholder="Artist Name" aria-label="Recipient's username"
             aria-describedby="button-addon2">
         <div class="input-group-append">
             <button class="btn btn-outline-secondary searchButton" type="button" id="button-addon2">search</button>
@@ -77,7 +77,7 @@
     <br><br>
 
     <div class="card">
-        <div class="card-header">this will hold our results</div>
+        <div class="card-header">Artist Info</div><br>
     </div>
 
 </body>
