--- a/wikitest.html
+++ b/wikitest.html
@@ -1,193 +1,110 @@
 <html>
-  <head> </head>
-  <body>
-    <div class="mw-parser-output">
-      <div class="redirectMsg">
-        <p>Redirect to:</p>
-        <ul class="redirectText">
-          <li>
-            <a href="/wiki/Albert_Einstein" title="Albert Einstein"
-              >Albert Einstein</a
-            >
-          </li>
-        </ul>
-      </div>
-      <table
-        class="box-Redirect_category_shell plainlinks metadata ambox ambox-move"
-        role="presentation"
-        style="margin-top: 1.1em; border: solid 1px darkblue; border-left-width: 0.5em;"
-      >
-        <tbody>
-          <tr>
-            <td class="mbox-empty-cell"></td>
-            <td
-              class="mbox-text"
-              style="padding-top: 0.9em; padding-bottom: 0.9em;"
-            >
-              <div class="mbox-text-span">
-                <img
-                  alt="Symbol redirect arrow with gradient.svg"
-                  src="//upload.wikimedia.org/wikipedia/commons/thumb/7/71/Symbol_redirect_arrow_with_gradient.svg/25px-Symbol_redirect_arrow_with_gradient.svg.png"
-                  decoding="async"
-                  width="25"
-                  height="15"
-                  srcset="
+
+<head> </head>
+
+<body>
+  <div class="mw-parser-output">
+    <div class="redirectMsg">
+      <p>Redirect to:</p>
+      <ul class="redirectText">
+        <li>
+          <a href="/wiki/Albert_Einstein" title="Albert Einstein">Albert Einstein</a>
+        </li>
+      </ul>
+    </div>
+    <table class="box-Redirect_category_shell plainlinks metadata ambox ambox-move" role="presentation" style="margin-top: 1.1em; border: solid 1px darkblue; border-left-width: 0.5em;">
+      <tbody>
+        <tr>
+          <td class="mbox-empty-cell"></td>
+          <td class="mbox-text" style="padding-top: 0.9em; padding-bottom: 0.9em;">
+            <div class="mbox-text-span">
+              <img alt="Symbol redirect arrow with gradient.svg" src="//upload.wikimedia.org/wikipedia/commons/thumb/7/71/Symbol_redirect_arrow_with_gradient.svg/25px-Symbol_redirect_arrow_with_gradient.svg.png"
+                decoding="async" width="25" height="15" srcset="
                     //upload.wikimedia.org/wikipedia/commons/thumb/7/71/Symbol_redirect_arrow_with_gradient.svg/38px-Symbol_redirect_arrow_with_gradient.svg.png 1.5x,
                     //upload.wikimedia.org/wikipedia/commons/thumb/7/71/Symbol_redirect_arrow_with_gradient.svg/50px-Symbol_redirect_arrow_with_gradient.svg.png 2x
                   "
-                  data-file-width="143"
-                  data-file-height="88"
-                />
-                <b
-                  >This page is a
-                  <a href="/wiki/Wikipedia:Redirect" title="Wikipedia:Redirect"
-                    >redirect</a
-                  >:</b
-                >
-                <div class="rcat">
-                  <ul>
-                    <li>
-                      <b
-                        ><a
-                          href="/wiki/Category:Redirects_from_moves"
-                          title="Category:Redirects from moves"
-                          >From a page move</a
-                        ></b
-                      >: This is a redirect from a page that has been moved
-                      (renamed). This page was kept as a redirect to avoid
-                      breaking links, both internal and external, that may have
-                      been made to the old page name.
-                    </li>
-                  </ul>
-                </div>
-                <div class="rcat">
-                  <ul>
-                    <li>
-                      <b
-                        ><a
-                          href="/wiki/Category:Redirects_from_surnames"
-                          title="Category:Redirects from surnames"
-                          >From a surname</a
-                        ></b
-                      >: This is a redirect from a person's
-                      <a href="/wiki/Surname" title="Surname">surname</a>. It is
-                      used because Wikipedia has only one biographical article
-                      of a person by this surname, or because one individual is
-                      ubiquitously known by this surname (other persons who
-                      share this name might be listed at a
-                      <a
-                        href="/wiki/Wikipedia:Disambiguation#Primary_topic"
-                        title="Wikipedia:Disambiguation"
-                        >primary topic disambiguation</a
-                      >
-                      page).
-                    </li>
-                  </ul>
-                </div>
-                <div class="rcat">
-                  <ul>
-                    <li>
-                      <b
-                        ><a
-                          href="/wiki/Category:Redirects_mentioned_in_hatnotes"
-                          title="Category:Redirects mentioned in hatnotes"
-                          >Mentioned in a hatnote</a
-                        ></b
-                      >: This is a redirect from a title that is mentioned in a
-                      <a
-                        href="/wiki/Wikipedia:HN"
-                        class="mw-redirect"
-                        title="Wikipedia:HN"
-                        >hatnote</a
-                      >
-                      at the redirect target. The mention is usually atop the
-                      <i>target article</i>. It may, however, be directly under
-                      a section header, or in another article's hatnote,
-                      <em
-                        >(whenever the hatnote is under a section,
-                        &#123;&#123;<a
-                          href="/wiki/Template:R_to_section"
-                          title="Template:R to section"
-                          >R to section</a
-                        >&#125;&#125; should also be used)</em
-                      >.
-                      <ul>
-                        <li>
-                          The titles of redirects mentioned in hatnotes may
-                          refer to a subject other than that of the target page.
-                          It is possible that this redirect may need to be
-                          retargeted, or become an article under its own title,
-                          <em
-                            >(see &#123;&#123;<a
-                              href="/wiki/Template:R_with_possibilities"
-                              title="Template:R with possibilities"
-                              >R with possibilities</a
-                            >&#125;&#125;)</em
-                          >. If the title is a good candidate for a
-                          <a
-                            href="https://en.wiktionary.org/wiki/"
-                            class="extiw"
-                            title="wikt:"
-                            >Wiktionary</a
-                          >
-                          link, it may also be added.
-                        </li>
-                      </ul>
-                    </li>
-                  </ul>
-                </div>
-                <div class="rcat">
-                  <ul>
-                    <li>
-                      <b
-                        ><a
-                          href="/wiki/Category:Printworthy_redirects"
-                          title="Category:Printworthy redirects"
-                          >From a printworthy page title</a
-                        ></b
-                      >: This is a redirect from a title that would be helpful
-                      in a
-                      <a
-                        href="https://meta.wikimedia.org/wiki/Paper_Wikipedia"
-                        class="extiw"
-                        title="meta:Paper Wikipedia"
-                        >printed</a
-                      >
-                      or
-                      <a
-                        href="/wiki/Wikipedia:1"
-                        class="mw-redirect"
-                        title="Wikipedia:1"
-                        >CD/DVD</a
-                      >
-                      version of Wikipedia. See
-                      <a
-                        href="/wiki/Wikipedia:Printability"
-                        title="Wikipedia:Printability"
-                        >Wikipedia:Printability</a
-                      >
-                      for more helpful information.
-                    </li>
-                  </ul>
-                </div>
-                <i
-                  ><small
-                    >When appropriate,
-                    <a
-                      href="/wiki/Wikipedia:Protection_policy"
-                      title="Wikipedia:Protection policy"
-                      >protection levels</a
-                    >
-                    are automatically sensed, described and categorized.</small
-                  ></i
-                >
+                data-file-width="143" data-file-height="88" />
+              <b>This page is a
+                <a href="/wiki/Wikipedia:Redirect" title="Wikipedia:Redirect">redirect</a>:</b>
+              <div class="rcat">
+                <ul>
+                  <li>
+                    <b><a href="/wiki/Category:Redirects_from_moves" title="Category:Redirects from moves">From a page
+                        move</a></b>: This is a redirect from a page that has been moved
+                    (renamed). This page was kept as a redirect to avoid
+                    breaking links, both internal and external, that may have
+                    been made to the old page name.
+                  </li>
+                </ul>
               </div>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+              <div class="rcat">
+                <ul>
+                  <li>
+                    <b><a href="/wiki/Category:Redirects_from_surnames" title="Category:Redirects from surnames">From a
+                        surname</a></b>: This is a redirect from a person's
+                    <a href="/wiki/Surname" title="Surname">surname</a>. It is
+                    used because Wikipedia has only one biographical article
+                    of a person by this surname, or because one individual is
+                    ubiquitously known by this surname (other persons who
+                    share this name might be listed at a
+                    <a href="/wiki/Wikipedia:Disambiguation#Primary_topic" title="Wikipedia:Disambiguation">primary
+                      topic disambiguation</a>
+                    page).
+                  </li>
+                </ul>
+              </div>
+              <div class="rcat">
+                <ul>
+                  <li>
+                    <b><a href="/wiki/Category:Redirects_mentioned_in_hatnotes" title="Category:Redirects mentioned in hatnotes">Mentioned
+                        in a hatnote</a></b>: This is a redirect from a title that is mentioned in a
+                    <a href="/wiki/Wikipedia:HN" class="mw-redirect" title="Wikipedia:HN">hatnote</a>
+                    at the redirect target. The mention is usually atop the
+                    <i>target article</i>. It may, however, be directly under
+                    a section header, or in another article's hatnote,
+                    <em>(whenever the hatnote is under a section,
+                      &#123;&#123;<a href="/wiki/Template:R_to_section" title="Template:R to section">R to section</a>&#125;&#125;
+                      should also be used)</em>.
+                    <ul>
+                      <li>
+                        The titles of redirects mentioned in hatnotes may
+                        refer to a subject other than that of the target page.
+                        It is possible that this redirect may need to be
+                        retargeted, or become an article under its own title,
+                        <em>(see &#123;&#123;<a href="/wiki/Template:R_with_possibilities" title="Template:R with possibilities">R
+                            with possibilities</a>&#125;&#125;)</em>. If the title is a good candidate for a
+                        <a href="https://en.wiktionary.org/wiki/" class="extiw" title="wikt:">Wiktionary</a>
+                        link, it may also be added.
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+              <div class="rcat">
+                <ul>
+                  <li>
+                    <b><a href="/wiki/Category:Printworthy_redirects" title="Category:Printworthy redirects">From a
+                        printworthy page title</a></b>: This is a redirect from a title that would be helpful
+                    in a
+                    <a href="https://meta.wikimedia.org/wiki/Paper_Wikipedia" class="extiw" title="meta:Paper Wikipedia">printed</a>
+                    or
+                    <a href="/wiki/Wikipedia:1" class="mw-redirect" title="Wikipedia:1">CD/DVD</a>
+                    version of Wikipedia. See
+                    <a href="/wiki/Wikipedia:Printability" title="Wikipedia:Printability">Wikipedia:Printability</a>
+                    for more helpful information.
+                  </li>
+                </ul>
+              </div>
+              <i><small>When appropriate,
+                  <a href="/wiki/Wikipedia:Protection_policy" title="Wikipedia:Protection policy">protection levels</a>
+                  are automatically sensed, described and categorized.</small></i>
+            </div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
 
-      <!-- 
+    <!-- 
     NewPP limit report
     Parsed by mw1345
     Cached time: 20190202191239
@@ -207,7 +124,7 @@
     Lua time usage: 0.013/10.000 seconds
     Lua memory usage: 893 KB/50 MB
     -->
-      <!--
+    <!--
     Transclusion expansion time report (%,ms,calls,template)
     100.00%   79.048      1 Template:Redirect_category_shell
     100.00%   79.048      1 -total
@@ -221,8 +138,9 @@
       2.69%    2.123      2 Template:Tl
     -->
 
-      <!-- Saved in parser cache with key enwiki:pcache:idhash:9292-0!canonical and timestamp 20190202191239 and revision id 865378495
+    <!-- Saved in parser cache with key enwiki:pcache:idhash:9292-0!canonical and timestamp 20190202191239 and revision id 865378495
      -->
-    </div>
-  </body>
+  </div>
+</body>
+
 </html>
