--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 
         <ul class="trackList"></ul>
 
-        <iframe id="player" type="text/html" width="640" height="390" src="http://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1m"
-            frameborder="0"></iframe>
+        <!-- <iframe id="player" type="text/html" width="640" height="390" src="http://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1m"
+            frameborder="0"></iframe> -->
 
         <div id="recent-searches"></div>
 
