--- a/index.html
+++ b/index.html
@@ -86,24 +86,16 @@
 
         <ul class="trackList"></ul>
 
-<<<<<<< HEAD
         <!-- <iframe id="player" type="text/html" width="640" height="390" src="http://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1m"
             frameborder="0"></iframe> -->
 
-        <div id="recent-searches"></div>
-=======
-        <iframe id="player" type="text/html" width="640" height="390" src="http://www.youtube.com/embed/M7lc1UVf-VE?enablejsapi=1m"
-            frameborder="0"></iframe>
->>>>>>> master
 
     </div>
 
 
 
-<<<<<<< HEAD
-=======
 
-    <div class="container test">
+    <!-- <div class="container test">
         <div class="item">
             <h2>{{title}}</h2>
             <iframe class="video w100" width="640" height="360" src="//www.youtube.com/embed/{{videoid}}" frameborder="0"
@@ -113,12 +105,11 @@
 
     <div id="results"></div>
 
-    <!-- scripts -->
+    <!-- scripts 
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="assets/js/youTubeApi.js"></script>
-    <script src="https://apis.google.com/js/client.js?onload=init"></script>
+    <script src="https://apis.google.com/js/client.js?onload=init"></script> -->
 </body>
->>>>>>> master
 
 
 
