--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <!-- Our JS -->
     <script src="assets/js/wikipediaAPI.js"></script>
-    <script src="assets/js/lastfm.js"></script>
+    <script src="assets/js/lastFM.js"></script>
     <script src="assets/js/youTubeAPI.js"></script>
     <script src="https://apis.google.com/js/client.js?onload=init"></script>
 
