--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- <script src="youtube.js"></script> -->
 
 
-
+    <link rel="shortcut icon" href="favicon-music.ico">
     <title>Know Them Jams</title>
 
 
